fix: complete the updateUser unit test service